# Phantom

./: .gitignore  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/Chat/: ChatHeader.tsx  MessageInput.tsx  MessageList.tsx
src/components/Layout/: Sidebar.tsx
src/components/Settings/: SettingsModal.tsx
src/services/: db.ts
