[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
libp2p = { version = "0.53", features = ["tcp", "noise", "yamux", "tokio", "gossipsub", "mdns", "macros", "quic"] }
tracing = "0.1"
tracing-subscriber = "0.3"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }
tauri-plugin-updater = "2"
x25519-dalek = { version = "2.0.1", features = ["static_secrets", "getrandom"] }
sha2 = "0.10.9"
hex = "0.4.3"
